[project]
name = "harmonic-resonance-harmonic-resonance"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
harmonic-resonance = "harmonic-resonance.harmonic-resonance.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["harmonic-resonance"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "harmonic-resonance.harmonic-resonance.__version__"}

[project.urls]
"Website" = "https://harmonic-resonance.github.io/harmonic-resonance"
"Repository" = "https://github.com/harmonic-resonance/harmonic-resonance"
"Issues" = "https://github.com/harmonic-resonance/harmonic-resonance/issues"